# hoarder-tools

./: .gitignore  README.md  archive_lossy_duplicates.py  archive_mp3_duplicates.py  case_normalize.py  cover_extract.py  cover_fetch_highres.py  cover_normalize.py  covit_fetch.py  folder_remove_cover_only.py  folder_remove_empty.py  lyrics_embed.py  lyrics_fetch_metal_archives.py  lyrics_purge.py  menu.py  metal_archives_scraper.py  nfo_generate.py  pyproject.toml  track_gap_checker.py  wiki_fetch_band_pdf.py
archive/: cover_remove_deprecated.py  metadata_fetch_genres_lastfm.py  metadata_normalize_multi_artist.py
band-photo-logo/: README 2.md  requirements.txt
