[project]
name = "audio-tools"
version = "0.1.0"
description = "Modular Python scripts for audio and metadata tasks"
authors = [
    {name = "deathrashed",email = "rileydevoy@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pillow (>=12.0.0,<13.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
